[package]
name = "workout-note-parser"
version = "0.1.1"
edition = "2021"
description = "Parse workout notes into JSON format."
repository = "https://github.com/jazzandrock/workout-note-parser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
color-eyre = "0.6.2"
pest = "2.7.5"
pest_derive = "2.7.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.26"
thiserror = "1.0.50"
